Try fix failure on Windows